planning and implementing mapArray function, - Realised that 1D array is sufficient.

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,14 @@ i {
   background-color: grey ;//#EAEAEA
 }
 
+.circle {
+  /* This is created for JS */
+}
+
+.cross {
+  /* This is created for JS */
+}
+
 
 .game-over{
   background-color: red;
